--- a/webapp/src/app/pages/index-page/index-page.component.html
+++ b/webapp/src/app/pages/index-page/index-page.component.html
@@ -10,9 +10,9 @@
 
                     <div class="hero__item set-bg">
                         <div class="hero__text">
-                            <span>Coviran</span>
-                            <h2>Buy <br />with pleasure.</h2>
-                            <p>The best choice for your online shopping.</p>
+                            <span>Couriers</span>
+                            <h2>Deliver <br />with pleasure.</h2>
+                            <p>The best delivery platform.</p>
                         </div>
                     </div>
 
@@ -21,5 +21,22 @@
         </div>
     </section>
     <!-- Banner -->
+
+    <section id="info">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam mauris massa, tristique sit amet posuere interdum, dapibus et justo. Cras condimentum elit vitae semper efficitur. Etiam tellus diam, pharetra ac dictum sit amet, feugiat a turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam mauris est, mattis id libero id, pharetra eleifend lacus. Pellentesque sed est non elit posuere dictum. Fusce fringilla malesuada tortor placerat egestas. Nunc ut diam mauris. Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis iudicium purus sit amet fermentum.</p>
+                </div>
+                <div class="col-6">
+                    <img src="../../../assets/img/courier.png" alt="" style="height: 70%; padding-left: 15%;">
+                </div>
+
+                <div class="col-12 text-center">
+                    <button class="btn btn-primary btn-lg" (click)="register()">Join Us</button>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </div>
