--- a/webapp/src/app/pages/register/register.component.html
+++ b/webapp/src/app/pages/register/register.component.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" type="date" id="birthday" name="date" placeholder="Birthday" formControlName="birthday">
+                    <input class="input100" type="date" id="birthday" name="date" placeholder="Birthday" formControlName="birthdate">
                     <p *ngIf="error_birthday" class="text-danger">A valid birthday date is required</p>
                 </div>
 
