apply and refuse business

--- a/webapp/src/app/components/navbar/navbar.component.html
+++ b/webapp/src/app/components/navbar/navbar.component.html
@@ -18,11 +18,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/" *ngIf="checkIfLoggedIn()">All Companies</a>
+                    <a class="nav-link" href="/all_businesses" *ngIf="checkIfLoggedIn()">All Companies</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/" *ngIf="checkIfLoggedIn()">Your Clients</a>
+                    <a class="nav-link" href="/clients" *ngIf="checkIfLoggedIn()">Your Clients</a>
                 </li>
 
             </ul>
