--- a/webapp/src/app/components/navbar/navbar.component.html
+++ b/webapp/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="/my_deliveries" *ngIf="checkIfLoggedIn()">My Deliveries</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="/all_businesses" *ngIf="checkIfLoggedIn()">All Companies</a>
                 </li>
 
